<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ JBoss, Home of Professional Open Source.
  ~ Copyright 2016, Red Hat, Inc., and individual contributors
  ~ as indicated by the @author tags. See the copyright.txt file in the
  ~ distribution for a full listing of individual contributors.
  ~
  ~ This is free software; you can redistribute it and/or modify it
  ~ under the terms of the GNU Lesser General Public License as
  ~ published by the Free Software Foundation; either version 2.1 of
  ~ the License, or (at your option) any later version.
  ~
  ~ This software is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~ Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public
  ~ License along with this software; if not, write to the Free
  ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jboss.ws</groupId>
    <artifactId>jbossws-wildfly1100-parent</artifactId>
    <version>5.2.1-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <name>JBossWS JBoss WildFly 11.0.0.Final Server Side Integration</name>
  <description>JBossWS WildFly 11.0.0.Final Server Side Integration</description>
  <groupId>org.jboss.ws</groupId>
  <artifactId>jbossws-wildfly1100-server-integration</artifactId>
  <packaging>jar</packaging>

  <dependencies>
    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
    </dependency>
    <dependency>
       <groupId>org.jboss.msc</groupId>
       <artifactId>jboss-msc</artifactId>
    </dependency>
    <dependency>
       <groupId>org.wildfly.security</groupId>
       <artifactId>wildfly-elytron</artifactId>
    </dependency>
    <dependency>
       <groupId>org.wildfly.core</groupId>
       <artifactId>wildfly-jmx</artifactId>
    </dependency>
    <dependency>
       <groupId>org.wildfly.core</groupId>
       <artifactId>wildfly-server</artifactId>
    </dependency>
    <dependency>
       <groupId>org.wildfly</groupId>
       <artifactId>wildfly-ee</artifactId>
    </dependency>
    <dependency>
       <groupId>org.wildfly</groupId>
       <artifactId>wildfly-ejb3</artifactId>
    </dependency>
    <dependency>
       <groupId>org.wildfly</groupId>
       <artifactId>wildfly-web-common</artifactId>
    </dependency>
    <dependency>
        <groupId>org.wildfly</groupId>
        <artifactId>wildfly-weld</artifactId>
    </dependency>
    <dependency>
       <groupId>org.jboss.ws</groupId>
       <artifactId>jbossws-api</artifactId>
    </dependency>
    <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging-annotations</artifactId>
    </dependency>
    <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging-processor</artifactId>
    </dependency>
    <dependency>
       <groupId>javax.enterprise</groupId>
       <artifactId>cdi-api</artifactId>
   </dependency>
    <dependency>
       <groupId>org.wildfly</groupId>
       <artifactId>wildfly-undertow</artifactId>
    </dependency>
    <dependency>
       <groupId>org.jboss.ws</groupId>
       <artifactId>jbossws-common</artifactId>
    </dependency>
    <dependency>
       <groupId>org.jboss.ws</groupId>
       <artifactId>jbossws-spi</artifactId>
    </dependency>
    <dependency>
       <groupId>org.wildfly.core</groupId>
       <artifactId>wildfly-subsystem-test</artifactId>
       <type>pom</type>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <fork>true</fork>
          <source>1.8</source>
          <target>1.8</target>
          <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.jboss.spec.javax.xml.ws</groupId>
                  <artifactId>jboss-jaxws-api_2.2_spec</artifactId>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
